package com.gupao.study.abstracts;

/**
 * 抽象产品 开发项目
 * @author rainly
 */
abstract public class AbstractDevelopmentProject extends AbstractProject{
    @Override
    public abstract void output();
}
