package com.gupao.study.abstracts;

/**
 * 抽象产品族 项目
 * @author rainly
 */
abstract class AbstractProject {
    /**
     * 输出项目项目
     */
    abstract void output();
}
