package com.gupao.study.abstracts;

/**
 * 抽象产品 服务项目
 * @author rainly
 */
abstract public class AbstractServiceProject extends AbstractProject{
    @Override
    public abstract void output();
}
