package com.gupao.study.interfaces;

/**
 * @author rainly
 */
public interface Company {
    Project createServiceProject();

    Project createDevelopmentProject();
}
